--- a/reddit-clone-frontend/src/pages/HomePage/HomePage.css
+++ b/reddit-clone-frontend/src/pages/HomePage/HomePage.css
@@ -9,8 +9,20 @@
     align-items: center;
 }
 
+.homepage__header-left {
+    display: flex;
+    align-items: center;
+}
+
+.homepage__header-logo {
+    width: 50px;
+    height: 50px;
+    /* margin-right: 5px; */
+    object-fit: contain;
+}
+
 .homepage__header-title {
-    font-size: 2rem;
+    font-size: 1.5rem;
     font-weight: bold;
 }
 
