--- a/reddit-clone-frontend/src/pages/PostPage/PostPage.css
+++ b/reddit-clone-frontend/src/pages/PostPage/PostPage.css
@@ -1,7 +1,10 @@
+.postpage__container-global {
+  padding: 0 10%;
+}
+
 .postpage__container {
   padding: 20px;
   max-width: 800px;
-  margin: 0 10%;
   background-color: #f9f9f9;
   border-radius: 8px;
   box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
@@ -61,12 +64,39 @@
   border: 1px solid #ccc;
   border-radius: 4px;
   resize: vertical;
-  outline: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .postpage__comment-input:focus {
   border-color: #0079d3;
   box-shadow: 0 0 4px rgba(0, 121, 211, 0.2);
+}
+
+.postpage__comment-submit-container {
+  display: flex;
+  justify-content: end;
+  width: 100%;
+  margin-top: 10px;
+}
+
+.postpage__comment-submit-button {
+  flex: 1;
+  background: #007aff;
+  color: #fff;
+  text-align: center;
+  padding: 10px;
+  border-radius: 8px;
+  font-size: 16px;
+  cursor: pointer;
+  font-weight: 600;
+  max-width: 100px;
+  transition: background-color 0.3s ease;
+}
+
+.postpage__comment-submit-button:hover {
+  background: #005bb5;
 }
 
 .postpage__comment-comments {
